Fix, on small screen size landscape, card would overflow

--- a/assets/css/blackjack.css
+++ b/assets/css/blackjack.css
@@ -259,7 +259,11 @@ main {
     transform: rotateY(180deg);
 }
 
-
+@media (orientation: landscape) {
+    #game-wrapper:not([data-phase="betting"]) .bet {
+        display: none;
+    }
+}
 
 @media screen and (max-width: 1200px){
 
